test/pass/array3.min
program
    array x[3] := 1, 2
start
end                    
