test/fail/dim.min
program
    string x[2]
start
end
